--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -1,6 +1,6 @@
 {
   "Version": "5.8.0",
-  "Title": "PureAdmin",
+  "Title": "雅江CCS查询平台",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
