--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "pinia": "^2.2.2",
+    "pinyin": "4.0.0-alpha.2",
     "pinyin-pro": "^3.24.2",
     "plus-pro-components": "^0.1.16",
     "qs": "^6.13.0",
     "responsive-storage": "^2.2.0",
+    "segmentit": "^2.0.3",
     "sortablejs": "^1.15.2",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3",
